MFB: Fixed bug #38770 (unpack() broken with longs on 64 bit machines).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@223575 c90b9560-bf6c-de11-be94-00142212c4b1