ext/standard/pack.c
@@ -752,14 +752,16 @@ PHP_FUNCTION(unpack)
 
 					case 'i': 
 					case 'I': {
-						long v;
+						long v = 0;
 						int issigned = 0;
 
 						if (type == 'i') {
 							issigned = input[inputpos + (machine_little_endian ? (sizeof(int) - 1) : 0)] & 0x80;
-						}
+						} else if (sizeof(long) > 4 && (input[inputpos + machine_endian_long_map[3]] & 0x80) == 0x80) {
+							v = ~INT_MAX;
+                                                }
 
-						v = php_unpack(&input[inputpos], sizeof(int), issigned, int_map);
+						v |= php_unpack(&input[inputpos], sizeof(int), issigned, int_map);
 						add_assoc_long(return_value, n, v);
 						break;
 					}
@@ -770,7 +772,7 @@ PHP_FUNCTION(unpack)
 					case 'V': {
 						int issigned = 0;
 						int *map = machine_endian_long_map;
-						long v;
+						long v = 0;
 
 						if (type == 'l') {
 							issigned = input[inputpos + (machine_little_endian ? 3 : 0)] & 0x80;
@@ -780,7 +782,11 @@ PHP_FUNCTION(unpack)
 							map = little_endian_long_map;
 						}
 
-						v = php_unpack(&input[inputpos], 4, issigned, map);
+						if (sizeof(long) > 4 && (input[inputpos + machine_endian_long_map[3]] & 0x80) == 0x80) {
+							v = ~INT_MAX;
+						}
+
+						v |= php_unpack(&input[inputpos], 4, issigned, map);
 						add_assoc_long(return_value, n, v);
 						break;
 					}
